try to fix iframe width bug on iphone safari

--- a/src/components/collection/collection-projects-player.styl
+++ b/src/components/collection/collection-projects-player.styl
@@ -91,9 +91,9 @@
   iframe
     border-radius: 5px 5px 0px 0px
     border-bottom: none
-    max-height: 100%;
-    max-width: 100%;
-    min-height: 100%;
-    min-width: 100%;
-    width: 0;
-    
+    // the following is needed for iphone safari for some reason
+    max-height: 100%
+    max-width: 100%
+    min-height: 100%
+    min-width: 100%
+    width: 0 
